--- a/tp2_project/templates/login.html
+++ b/tp2_project/templates/login.html
@@ -35,7 +35,7 @@
 
 <div class="card border border-2 border-dark">
     <div class="entete text-center bg-primary text-white">
-        <h3>Welcome Back!</h3>
+        <h3>Log in</h3>
     </div>
     <div class="card-body">
         <form method="post">
@@ -52,7 +52,7 @@
         </form>
     </div>
     <div class="card-footer text-muted text-center">
-        <small>Don't have an account? <a href="/register/">Register here</a></small>
+        <small>Don't have an account? <a href="/tp2_app/register/">Register here</a></small>
     </div>
 </div>
 
