--- a/tp2_project/templates/base_login.html
+++ b/tp2_project/templates/base_login.html
@@ -7,9 +7,16 @@
     <title>{% block title %}My Django Site{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <style>
+        body {
+            background: linear-gradient(135deg, #6a11cb, #2575fc);
+            min-height: 100vh;
+            margin: 0;
+        }
+    </style>
 </head>
 <header>
-    {% include 'partials/menu.html' %}
+    {% block menu %}{% endblock %}
 </header>
 <body>
     {% block content %}{% endblock %}
