--- a/tp2_project/templates/register.html
+++ b/tp2_project/templates/register.html
@@ -51,12 +51,12 @@
                 <input type="text" id="username" name="username" class="form-control" placeholder="Enter your username" required>
             </div>
             <div class="mb-3">
-                <label for="firstname" class="form-label">First Name</label>
-                <input type="text" id="firstname" name="firstname" class="form-control" placeholder="Enter your first name" required>
+                <label for="first_name" class="form-label">First Name</label>
+                <input type="text" id="first_name" name="first_name" class="form-control" placeholder="Enter your first name" required>
             </div>
             <div class="mb-3">
-                <label for="lastname" class="form-label">Last Name</label>
-                <input type="text" id="lastname" name="lastname" class="form-control" placeholder="Enter your last name" required>
+                <label for="last_name" class="form-label">Last Name</label>
+                <input type="text" id="last_name" name="last_name" class="form-control" placeholder="Enter your last name" required>
             </div>
             <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
